# MCVP

./: README.md  pyproject.toml
mcv_mcp/: __init__.py  client.py  server.py
