[project]
name = "mcv-mcp"
version = "0.1.0"
description = "MCP Server for MyCourseView (Chulalongkorn University)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcv-mcp = "mcv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
